# Audio2TextAPI

./: .gitignore  Cargo.toml  README.md
src/: audio_parser.rs  main.rs  model_handler.rs  transcriber.rs
tmp/: &#33258;&#23398;&#20064;&#22411;&#22270;&#20687;AI&#24314;&#27169;&#31649;&#29702;&#24179;&#21488;20231222v0.1.docx
