[package]
name = "whisper-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-rs = { version = "0.11.1", features = ["cuda", "raw-api", "whisper-cpp-log", "whisper-cpp-tracing"] }
tokio = { version = "1.28.2", features = ["full"] }
symphonia = { version = "0.5.1", features = [] }
phf = { version = "0.11.2", features = ["macros"] }
reqwest = "0.12.3"
actix-web = "4.5.1"
actix-multipart = "0.6.1"
actix-files = "0.6.5"
futures-util = "0.3.30"
uuid = "1.8.0"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
